--- a/lab2/index.html
+++ b/lab2/index.html
@@ -19,21 +19,21 @@
 
 
 <div id=box1>
-	<h2>Generator Name</h2><label>
+	<h2>Generator Name</h2><input id="Generator-1" value="0" />
 	<p>Genrator description...
 	Sescribing how much it generate 
 	per minute</p>
 	<label>5/60</label><button>10 Resource</button>
 </div>
 
-<div id=box1><h2>Generator Name</h2><label>
+<div id=box2><h2>Generator Name</h2><input id="Generator-2" value="0" />
 	<p>Genrator description...
 	Sescribing how much it generate 
 	per minute</p>
 	<label>10/60</label><button>100 Resource</button>
 </div>
 
-<div id=box1><h2>Generator Name</h2><label>
+<div id=box3><h2>Generator Name</h2><input id="Generator-3" value="0" />
 	<p>Genrator description...
 	Sescribing how much it generate 
 	per minute</p>
